tests/idris2/basic022/expected
1/1: Building Erase (Erase.idr)
Error: While processing left hand side of bad. Can't match on False (Erased argument).

Erase.idr:5:5--5:10
   |
 5 | bad False = True
   |     ^^^^^

Error: While processing left hand side of minusBad. Can't match on LeZ (Erased argument).

Erase.idr:19:18--19:21
    |
 19 | minusBad (S k) Z LeZ = S k
    |                  ^^^

Main> \m => minus (S (S m)) m prf
Main> Bye for now!
